первая условнофункциональная версия :)))

--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@ width: 100%;
 #buttonsdiv {
 margin: 0 auto;
 }
+
+
+.marker {
+display: block;
+border: none;
+height: 70px;
+width: 70px;
+border-radius: 50%;
+cursor: pointer;
+padding: 0;
+}
 </style>
 </head>
 <body>
