--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset='utf-8' />
-	<title>Display a map</title>
-	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.js'></script>
-	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.css' rel='stylesheet' />
-	<link href='style.css' rel='stylesheet' />
-</head>
-<body>
-
-	<div id='map'></div>
-	<div id="sidebar">
-		<h2>Список пользователей</h2>
-		<div id="userlist">
-			<!--<div class="user">
-				<div class="avatar"><img src="" width="30px" height="30px"></div>
-				<div class="userinfo"><p>Username</p><p>Usermail</p></div>
-			</div>-->
+	<head>
+		<meta charset="utf-8" />
+		<title>My map</title>
+		<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"/>
+		<script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.js"></script>
+		<link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.css" rel="stylesheet"/>
+		<link href="style.css" rel="stylesheet"/>
+	</head>
+	<body>
+		<div id="map"></div>
+		<div id="sidebar">
+			<h2>Список пользователей</h2>
+			<div id="userlist"></div>
 		</div>
-	</div>
-
- <script src='code.js'></script>
-</body>
+	 <script src="code.js"></script>
+	</body>
 </html>
